fix & create: implementado los logs de seguridad
